On branch main  Changes to be committed: 	modified:   index.html 	deleted:    main.html 	modified:   style.css 	deleted:    tanks.webp fixed unreadable links, removed unused lib

--- a/style.css
+++ b/style.css
@@ -15,6 +15,9 @@
 	 color: #6c9;
 	 text-decoration: none;
 }
+ .black {
+     color: #000;
+ }
  .clearfix::after, .clearfix::before {
 	 content: " ";
 	 display: table;
