--- a/style.css
+++ b/style.css
@@ -334,18 +334,19 @@
 }
  .section-wrapper .skill-percentage:nth-child(7)::before {
 	 width: 85%;
-	 animation: skill_6 0.6s ease;
+	 animation: skill_7 0.6s ease;
 }
  .section-wrapper .skill-percentage:nth-child(8)::before {
 	 width: 50%;
-	 animation: skill_6 0.6s ease;
+	 animation: rainbow-bg 2.5s linear;
+     animation-iteration-count: infinite;;
 }
  @keyframes skill_1 {
 	 from {
 		 width: 0%;
 	}
 	 to {
-		 width: 80%;
+		 width: 60%;
 	}
 }
  @keyframes skill_2 {
@@ -353,7 +354,7 @@
 		 width: 0%;
 	}
 	 to {
-		 width: 90%;
+		 width: 70%;
 	}
 }
  @keyframes skill_3 {
@@ -361,7 +362,7 @@
 		 width: 0%;
 	}
 	 to {
-		 width: 50%;
+		 width: 60%;
 	}
 }
  @keyframes skill_4 {
@@ -377,7 +378,7 @@
 		 width: 0%;
 	}
 	 to {
-		 width: 70%;
+		 width: 40%;
 	}
 }
  @keyframes skill_6 {
@@ -393,6 +394,46 @@
 		 width: 0%;
 	}
 	 to {
-		 width: 70%;
+		 width: 85%;
 	}
+}
+
+
+@keyframes rainbow-bg{
+		100%,0%{
+			background-color: rgb(255,0,0);
+		}
+		8%{
+			background-color: rgb(255,127,0);
+		}
+		16%{
+			background-color: rgb(255,255,0);
+		}
+		25%{
+			background-color: rgb(127,255,0);
+		}
+		33%{
+			background-color: rgb(0,255,0);
+		}
+		41%{
+			background-color: rgb(0,255,127);
+		}
+		50%{
+			background-color: rgb(0,255,255);
+		}
+		58%{
+			background-color: rgb(0,127,255);
+		}
+		66%{
+			background-color: rgb(0,0,255);
+		}
+		75%{
+			background-color: rgb(127,0,255);
+		}
+		83%{
+			background-color: rgb(255,0,255);
+		}
+		91%{
+			background-color: rgb(255,0,127);
+		}
 }
